added header.js but still working on it; working on conditional rendering of add drink form; add new drink button at top not yet functional

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: red;
 }
+
+/* #drinkForm {
+background-color:  goldenrod;
+}   */
+
+/* #header-title {
+  background-color: blue;
+} */
