--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,16 @@ body {
   background-color: red;
 }
 
-/* #drinkForm {
-background-color:  goldenrod;
-}   */
+#drinkForm {
+  background-color: goldenrod;
+}
 
-/* #header-title {
-  background-color: blue;
-} */
+#header-title {
+  background-color: gray;
+}
+
+#drink-name {
+  border: 4px solid white;
+  margin: 3px;
+  text-align: center;
+}
