--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 #drinkForm {
-  background-color: goldenrod;
+  background-color: #B7AD99;
 }
 
 .header {
@@ -29,8 +29,10 @@ body {
   text-align: center;
 }
 
-.login {
+.loginRegister {
   background-color: gray;
+  height: 100%;
+  background-image: url(Canva\ -\ Glass\,\ Martini\,\ Cocktail\,\ Cocktail\ Glass\,\ Highball.jpg)
 }
 
 /* .card {
@@ -40,12 +42,6 @@ body {
 } */
 
 #root {
-  background-color: #BBBB97
+  background-color: #BBBB97;
 }
-/* .card-deck { */
-  /* padding: 10px; */
-/* } */
 
-/* #email {
-  text-align: left;
-} */
