got the background image to work for the login page

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* #root {
+  background-color: #BBBB97;
+} */
+
 body {
   margin: 0;
   padding: 0;
@@ -29,10 +33,30 @@ body {
   text-align: center;
 }
 
-.loginRegister {
-  background-color: gray;
+#loginRegister {
   height: 100%;
-  background-image: url(Canva\ -\ Glass\,\ Martini\,\ Cocktail\,\ Cocktail\ Glass\,\ Highball.jpg)
+  background-image: url("Canva\ -\ Glass\,\ Martini\,\ Cocktail\,\ Cocktail\ Glass\,\ Highball.jpg");
+  background-size: cover;
+  background-position: center;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+
+}
+.form-group {
+  width: 200px;
+}
+.form {
+  width: 200px;
+}
+.welcome {
+  text-align: center;
+  border: black solid 8px;
 }
 
 /* .card {
@@ -41,7 +65,5 @@ body {
   padding: 10px;
 } */
 
-#root {
-  background-color: #BBBB97;
-}
+
 
