--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,16 @@
-/* #root {
-  background-color: #BBBB97;
-} */
+#root {
+  position: sticky;
+  height: 100%;
+  background-image: url("Cocktail-Bar.jpg");
+  background-size: cover;
+  background-position: center;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+} 
 
 body {
   margin: 0;
@@ -9,29 +19,40 @@ body {
 }
 
 #drinkForm {
-  background-color: #B7AD99;
+  background-color: #C5CBD3;
+  max-width: 20%;
 }
 
-.header {
+/* .header {
   background-color: gray;
   padding: 25px;
-}
+  max-height: 10em;
+} */
 
 #drink-name {
-  border: 4px solid black;
+  border: 2px solid black;
   margin: 3px;
   text-align: center;
   padding: 15px;
+  font-family: 'Do Hyeon', sans-serif;
+  font-size: 3em;
+
 }
 
 #header-title {
   text-align: center;
-  font-size: 5em;
+  font-size: 8em;
+  background-color: #C5CBD3;
+  width: 4em center;
+  font-family: 'Kaushan Script', cursive;
+
+  /* border-radius: 50px; */
+  /* margin: 25%; */
 }
 
-#header-description {
+/* #header-description {
   text-align: center;
-}
+} */
 
 #loginRegister {
   height: 100%;
@@ -58,6 +79,9 @@ body {
   text-align: center;
   border: black solid 8px;
 }
+/* .card-body {
+  padding: 3px;
+} */
 
 /* .card {
   width: 30em;
