got background image to fix

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 
 body {
   background-image: url("apple-drink.jpg");
+  background-attachment: fixed;
   position: relative;
   width: 100%;
   background-size: cover;
