styled edit button and made styling changes to add drink button and form

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   position: relative;
   width: 100%;
   background-size: cover;
-  background-position: center;
+  background-position: 40px 100px;
   min-height: 100%;
   height: auto;
   top: 0;
@@ -20,49 +20,50 @@ body {
 }
 
 #drinkForm {
-  background-color: #D6BDAD;
+  background-color: #BDB689;
   max-width: 50%;
+  margin-top: 2%;
 }
 
 .header {
   position: fixed;
-  background-color: gray;
-  /* padding: 2px; */
-  max-height: 12em;
+  background-color: #C7C7C8;
+  max-height: 10em;
   width: 100%;
   z-index: 2;
+  background-attachment: fixed;
 }
 
 #drink-name {
   margin: 3px;
-  text-align: center;
+  text-align: left;
   padding: 15px;
-  font-family: 'Do Hyeon', sans-serif;
-  font-size: 3em;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 20px;
 
 }
 
 #header-title {
   text-align: center;
-  font-size: 10em;
-  /* background-color: #BCBD8B; */
+  font-size: 9em;
+  background-color: #A29587;
   max-width: 4em center;
   font-family: 'Kaushan Script', cursive;
   margin-top: 0%;
-  /* border-radius: 50%; */
-  /* max-width: 15% center; */
+  border-radius: 50%;
+  background-attachment: fixed;
 
-
-  /* border-radius: 50px; */
-  /* margin: 25%; */
+  /* max-width: 25% center; */
 }
 
 /* #header-description {
   text-align: center;
+  margin-left: 20%;
 } */
 
 .login {
   font-size: 25px;
+  /* background-color: white; */
 }
 
 .register {
